fixes subscribe inputs on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -200,10 +200,11 @@ form
 input
   display: inline-block
   -webkit-appearance: none
+  -moz-appearance: none
   border: 0
   background: none
   font-family: $font-luculent-regular
-  padding-bottom: 0.4em
+  padding: 0 0 0.4em
   margin-bottom: 1.3em
   &:focus
     outline: 0
